--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,47 @@ trim_trailing_whitespace = false
 [Makefile]
 indent_style = tab
 indent_size = 4
+
+[{*.kt,*.kts}]
+ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
+
+ij_kotlin_line_comment_at_first_column = false
+ij_kotlin_line_comment_add_space = true
+
+# These options can keep to use single name import
+ij_kotlin_name_count_to_use_star_import = 2147483647
+ij_kotlin_name_count_to_use_star_import_for_members = 2147483647
+
+ij_kotlin_keep_blank_lines_in_declarations = 1
+ij_kotlin_keep_blank_lines_in_code = 1
+ij_kotlin_keep_blank_lines_before_right_brace = 0
+
+# optional but recommended
+ij_kotlin_align_multiline_parameters = false
+
+# optional but recommended
+ij_continuation_indent_size = 4
+
+# Android specific rules
+ij_kotlin_import_nested_classes = false
+
+# Defines the imports layout. The layout can be composed by the following symbols:
+# "*" - wildcard. There must be at least one entry of a single wildcard to match all other imports. Matches anything after a specified symbol/import as well.
+# "|" - blank line. Supports only single blank lines between imports. No blank line is allowed in the beginning or end of the layout.
+# "^" - alias import, e.g. "^android.*" will match all android alias imports, "^" will match all other alias imports.
+# import paths - these can be full paths, e.g. "java.util.List.*" as well as wildcard paths, e.g. "kotlin.**"
+# Examples (we use ij_kotlin_imports_layout to set an imports layout for both ktlint and IDEA via a single property):
+# ij_kotlin_imports_layout=* # alphabetical with capital letters before lower case letters (e.g. Z before a), no blank lines
+# default IntelliJ IDEA style, same as alphabetical, but with "java", "javax", "kotlin" an  d alias imports in the end of the imports list
+ij_kotlin_imports_layout = *, java.**, javax.**, kotlin.**, ^
+
+# According to https://kotlinlang.org/docs/reference/coding-conventions.html#names-for-test-methods it is acceptable to write method names
+# in natural language. When using natural language, the description tends to be longer. Allow lines containing an identifier between
+# backticks to be longer than the maximum line length. (Since 0.41.0)
+# [**/test/**.kt]
+# Comma-separated list of allowed wildcard imports that will override the no-wildcard-imports rule.
+# This can be used for allowing wildcard imports from libraries like Ktor where extension functions are used in a way that creates a lot of imports.
+# "**" applies to package and all subpackages
+# ij_kotlin_packages_to_use_import_on_demand=java.util.* # allow java.util.* as wildcard import
+# ij_kotlin_packages_to_use_import_on_demand=io.ktor.** # allow wildcard import from io.ktor.* and all subpackages
+ij_kotlin_packages_to_use_import_on_demand = org.junit.Assert.*
