--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ktlint_plugin_version = '10.3.0'
     compose_snapshot_version = ''
     ktlint_version = '0.45.2'
+    spotless_veresion = '6.5.2'
   }
 
   repositories {
@@ -28,6 +29,7 @@ plugins {
   id 'com.android.library' version "$gradle_plugin_version" apply false
   id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
   id 'org.jlleitschuh.gradle.ktlint' version "$ktlint_plugin_version"
+  id 'com.diffplug.spotless' version "$spotless_veresion"
 }
 
 subprojects {
@@ -43,12 +45,19 @@ subprojects {
     }
   }
 
-  apply plugin: 'org.jlleitschuh.gradle.ktlint'
-  ktlint {
-    version = "$ktlint_version"
-    debug = true
-    android = true
-    enableExperimentalRules = true
-    additionalEditorconfigFile = file("$rootDir/.editorconfig")
+  apply plugin: 'com.diffplug.spotless'
+  spotless {
+    kotlin {
+      target '**/*.kt'
+      targetExclude("$buildDir/**/*.kt")
+      targetExclude('bin/**/*.kt')
+      ktlint {
+        version = "$ktlint_version"
+        debug = true
+        android = true
+        enableExperimentalRules = true
+        additionalEditorconfigFile = file("$rootDir/.editorconfig")
+      }
+    }
   }
 }
