--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
     targetCompatibility JavaVersion.VERSION_1_8
   }
   kotlinOptions {
-    jvmTarget = '1.8'
+    jvmTarget = JavaVersion.VERSION_1_8.toString()
   }
   buildFeatures {
     viewBinding true
@@ -36,13 +36,13 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.core:core-ktx:1.9.0-alpha05'
-  implementation 'androidx.appcompat:appcompat:1.6.0-alpha05'
-  implementation 'com.google.android.material:material:1.7.0-alpha03'
-  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-  implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-  implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
-  testImplementation 'junit:junit:4.13.2'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+  implementation "androidx.core:core-ktx:$androidx_core_ktx_version"
+  implementation "androidx.appcompat:appcompat:$androidx_appcompat_version"
+  implementation "com.google.android.material:material:$google_android_material_version"
+  implementation "androidx.constraintlayout:constraintlayout:$androidx_constraintlayout_version"
+  implementation "androidx.navigation:navigation-fragment-ktx:$androidx_fragment_version"
+  implementation "androidx.navigation:navigation-ui-ktx:$androidx_navigation_version"
+  androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
+  androidTestImplementation "androidx.test.espresso:espresso-core:$androidx_test_espresso_version"
+  testImplementation "junit:junit:$junit_version"
 }
