--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,16 @@ buildscript {
     compose_snapshot_version = ''
     ktlint_version = '0.45.2'
     spotless_veresion = '6.5.2'
+
+    google_android_material_version = '1.7.0-alpha03'
+    androidx_core_ktx_version = '1.9.0-alpha05'
+    androidx_appcompat_version = '1.6.0-alpha05'
+    androidx_constraintlayout_version = '2.1.4'
+    androidx_fragment_version = '2.5.0'
+    androidx_navigation_version = '2.5.0'
+    androidx_test_espresso_version = '3.4.0'
+    androidx_junit_version = '1.1.3'
+    junit_version = '4.13.2'
   }
 
   repositories {
